# Soft-Renderer

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: geometry.h  model.h  tga_image.h
include/util/: model.h  tga_image.h
src/: CMakeLists.txt  main.cpp  model.cpp  tga_image.cpp
src/util/: model.cpp  tga_image.cpp
test/: CMakeLists.txt
test/include/: debug_tools.h
test/unit/: tga_image_test.cpp
